feat: complete JSON Structure Core conformance
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>